--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,30 +1,24 @@
 {
-  "name": "projbackend",
+  "name": "projfrontend",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "App.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "npx parcel src/index.html"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "parcel": "^2.9.3",
+    "postcss": "^8.4.24",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.3.2"
+  },
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.4",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-jwt": "^5.3.1",
-    "express-validator": "^6.2.0",
-    "formidable": "^1.2.1",
-    "i": "^0.3.6",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
-    "mongoose": "^7.2.1",
-    "morgan": "^1.9.1",
-    "nodemon": "^1.19.4",
-    "npm": "^6.13.0",
-    "uuid": "^3.3.3"
+    "query-string": "^8.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.0"
   }
 }
