--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,11 @@
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
+    "prop-types": "^15.8.1",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.0"
+    "react-router-dom": "^6.14.0",
+    "react-stripe-checkout": "^2.6.3"
   }
 }
