--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.1.1",
+    "@stripe/stripe-js": "^1.54.1",
     "prop-types": "^15.8.1",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
