--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "App.js",
   "scripts": {
-    "start": "npx parcel src/index.html"
+    "start": "parcel src/index.html"
   },
   "keywords": [],
   "author": "",
