--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "console-browserify": "^1.2.0",
+    "crypto-browserify": "^3.12.0",
+    "events": "^3.3.0",
     "parcel": "^2.9.3",
     "postcss": "^8.4.24",
     "process": "^0.11.10",
-    "tailwindcss": "^3.3.2"
+    "stream-browserify": "^3.0.0",
+    "tailwindcss": "^3.3.2",
+    "url": "^0.11.1",
+    "util": "^0.12.5"
   },
   "dependencies": {
     "@stripe/react-stripe-js": "^2.1.1",
