--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,14 +24,19 @@
     "util": "^0.12.5"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@stripe/react-stripe-js": "^2.1.1",
     "@stripe/stripe-js": "^1.54.1",
+    "axios": "^1.4.0",
     "prop-types": "^15.8.1",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.0",
+    "react-stars": "^2.2.5",
     "react-stripe-checkout": "^2.6.3",
     "swiper": "^10.0.4"
   }
