--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,8 @@
     "react-router-dom": "^6.14.0",
     "react-stars": "^2.2.5",
     "react-stripe-checkout": "^2.6.3",
-    "swiper": "^10.0.4"
+    "swiper": "^10.0.4",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss-no-scrollbar": "^1.0.1"
   }
 }
